* 更新 安卓5.9.2版本SDK

--- a/unvs-demo-android/app/src/main/AndroidManifest.xml
+++ b/unvs-demo-android/app/src/main/AndroidManifest.xml
@@ -34,7 +34,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.cmic.sso.sdk.view.LoginAuthActivity"
+            android:name="com.cmic.gen.sdk.view.GenLoginAuthActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:launchMode="singleTop"
             android:screenOrientation="behind"
