--- a/unvs-demo-android/app/build.gradle
+++ b/unvs-demo-android/app/build.gradle
@@ -42,5 +42,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation 'com.google.code.gson:gson:2.8.8'
-    implementation files('libs/unvs-sdk-android.aar')
+    implementation files('libs/unvs-sdk-android_1.0.3.aar')
 }
