--- a/unvs-demo-android/app/src/main/AndroidManifest.xml
+++ b/unvs-demo-android/app/src/main/AndroidManifest.xml
@@ -6,11 +6,9 @@
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
+    
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:icon="@drawable/ic_ucloud_logo"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
